name:                HaskellAlgorithms
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/HaskellAlgorithms#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       HUnit >= 1.3.1.1
                     , MonadRandom >= 0.4.2.3
                     , QuickCheck >= 2.8.2
                     , array >= 0.5.1.0
                     , base >= 4.7 && < 5
                     , containers >= 0.5.6.2
                     , data-memocombinators
                     , hspec >= 2.2.3
                     , mtl
                     , random >= 1.1
                     , split
                     , utility-ht
                     , lens
                     , haskell-docs

  default-language:    Haskell2010

executable HaskellAlgorithms-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       HUnit >= 1.3.1.1
                     , HaskellAlgorithms
                     , MonadRandom >= 0.4.2.3
                     , QuickCheck >= 2.8.2
                     , array >= 0.5.1.0
                     , base
                     , containers >= 0.5.6.2
                     , hspec >= 2.2.3
                     , random >= 1.1
                     , split
  default-language:    Haskell2010

test-suite HaskellAlgorithms-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       HUnit >= 1.3.1.1
                     , HaskellAlgorithms
                     , MonadRandom >= 0.4.2.3
                     , QuickCheck >= 2.8.2
                     , array >= 0.5.1.0
                     , base
                     , containers >= 0.5.6.2
                     , hspec >= 2.2.3
                     , hspec >= 2.2.3
                     , random >= 1.1
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/HaskellAlgorithms
